change class names for cta section - cannot start w a number

--- a/style.css
+++ b/style.css
@@ -148,3 +148,8 @@ html, body {
   font-size: 36px;
   font-family: light italic;
 }
+
+.section_04 {
+  display: flex;
+  justify-content: center;
+}
